[tool.poetry]
name = "poundwholesalescraping"
version = "0.1.0"
description = ""
authors = ["KittGT42 <114111458+KittGT42@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.1"
requests = "^2.31.0"
selenium = "^4.20.0"
pandas = "^2.2.2"
asyncio = "^3.4.3"
aiohttp = "^3.9.5"
selenium-wire = "^5.1.0"
setuptools = "^69.5.1"
blinker = "^1.8.2"
seleniumbase = "^4.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
